prevent sidenav content jump on volume scroll windows/chrome

--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,11 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
+/* Isolate volume scroll */
+body.lockscroll {
+    overflow: hidden !important;
+}
+
 #root {
     height: 100%;
 }
@@ -939,14 +944,6 @@ body {
 
 .logout-button:hover {
     background-color: var(--btn-brand-color-hover);
-}
-
-body.lockscroll {
-    overflow: hidden !important;
-}
-
-.sidenav > .sidenav_wrapper.lockscroll {
-    overflow: hidden !important;
 }
 
 /* Responsive */
